# rust-file-encryption

./: Cargo.toml  README.md  crypto.rs  main.rs
